--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -1,25 +1,42 @@
 .header {
-    background-color: #d8e4b7;
+  background-color: #fff;
+  box-shadow: 0 4px 6px -2px rgba(0, 0, 0, 0.1);
+  font-family: 'Literata';
 }
 
 .container {
-    margin: 0 auto;
-    height: 15vh;
-    width: 90%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    overflow: hidden;
+  margin: 0 auto;
+  height: 10vh;
+  width: 85%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  overflow: hidden;
+}
+
+.link {
+  height: 100%;
+  box-sizing: border-box;
 }
 
 .image {
-    padding: 14px 0 14px 10px;
-    height: 100%;
-    box-sizing: border-box;
+  height: 100%;
 }
 
-.navigation {
-    width: 30%;
-    display: flex;
-    justify-content: space-between;
+.buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.button {
+  margin-left: 12px;
+  color: #374151;
+  background: none;
+  border: none;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.button:hover {
+  color: #10b91d;
 }
