--- a/src/components/root/root.module.css
+++ b/src/components/root/root.module.css
@@ -1,4 +1,6 @@
 .root {
-    margin: 0 auto;
-    width: 100%;
+  margin: 0 auto;
+  width: 100%;
+  min-height: 100vh;
+  background-color: #fff;
 }
