--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -1,4 +1,7 @@
 .header {
+  position: sticky;
+  top: 0;
+  z-index: 9999;
   background-color: #fff;
   box-shadow: 0 4px 6px -2px rgba(0, 0, 0, 0.1);
   font-family: 'Literata';
@@ -38,5 +41,6 @@
 }
 
 .button:hover {
-  color: #10b91d;
+  background: none;
+  color: rgb(19, 186, 130);
 }
