--- a/src/components/header-navigation/header-navigation.module.css
+++ b/src/components/header-navigation/header-navigation.module.css
@@ -22,6 +22,7 @@
 .link {
   position: relative;
   padding-bottom: 6px;
+  cursor: pointer;
   border: none;
   background-color: transparent;
   color: #374151;
@@ -31,11 +32,11 @@
 }
 
 .link:hover {
-  color: #10b91d;
+  color: rgb(19, 186, 130);
 }
 
 .active {
-  color: #10b91d;
+  color: rgb(19, 186, 130);
 }
 
 .active::after {
@@ -45,7 +46,7 @@
   left: 0;
   width: 100%;
   height: 2px;
-  background: #10b91d;
+  background: rgb(19, 186, 130);
   animation: underline 0.3s ease;
 }
 
