--- a/src/components/product-card/product-card.module.css
+++ b/src/components/product-card/product-card.module.css
@@ -1,11 +1,17 @@
 .card {
+  height: 100%;
   border-radius: 0.5rem;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
   background-color: #fff;
   overflow: hidden;
+  cursor: pointer;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  transition: transform 0.2s ease-in;
+}
+
+.card:hover {
+  transform: translateY(-10px);
 }
 
 .image {
@@ -51,21 +57,4 @@
   font-family: 'Literata';
   font-size: 22px;
   line-height: 1.25;
-}
-
-.button {
-  padding: 0.5rem 1rem;
-  background-color: transparent;
-  border: 1px solid #10b91d;
-  border-radius: 9999px;
-  cursor: pointer;
-  color: #10b91d;
-  font-size: 14px;
-  line-height: 1.25;
-  transition: color 150ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.button:hover {
-  color: #fff;
-  background-color: #10b91d;
 }
