--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import '@assets/fonts/fonts.css';
+@import '@assets/fonts/literata/style.css';
+@import '@assets/fonts/futura-pt/style.css';
 
 body {
   margin: 0;
