--- a/src/components/ui/button/button.module.css
+++ b/src/components/ui/button/button.module.css
@@ -14,3 +14,10 @@
   color: #fff;
   background-color: rgb(19, 186, 130);
 }
+
+.UIButton:disabled {
+  opacity: 0.7;
+  cursor: not-allowed;
+  background-color: transparent;
+  color: rgb(19, 186, 130);
+}
